--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Abel" />
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
